2010-02-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/display.c (MagickXDisplayImage): Image number was
	incorrect in window title.

	* magick/render.c (DrawImage): Path points data allocation was
	much larger than it needed to be.  Patch by Vladimir Lukianov.
	Resolves SourceForge issue 2947851 "Memory allocation error on
	vector graphics (or mem bomb)".

	* magick/constitute.c (WriteImages): +adjoin was not working
	correctly for the case when only one image frame is present.  With
	+adjoin and writing one frame to "foo%d.jpg" it was outputting
	"foo%d.jpg" rather than "foo0.jpg".  Problem reported by Frans
	Coetzee.

2010-02-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: Released GraphicsMagick 1.3.9.

	* VisualMagick/bin/delegates.mgk: Sending output to "win:" now
	sends output to Windows Picture and Fax Viewer (shimgvw.dll)
	rather than gmdisplay.

2010-02-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/imdoc2man: Bare single quotes at the beginning of a line
	need to be escaped in order to make roff happy.  Problem reported
	by Daniel Kobras.

	* magick/command.c (ImportImageCommand): Don't assign a pointer to
	static constant data into an array which uses heap allocated data.
	Avoids a "double free" error when using gm import -frame.  Patch
	by Daniel Kobras.

	* magick/color_lookup.c (QueryColorname): XPM does not support
	RGBA color syntax, but it does support RGB.  Patch by Daniel
	Kobras.

	* magick/blob.c (OpenBlob): Only form multi-part filename when
	required.

	* magick/display.c (MagickXDisplayImage): The display '-update'
	option was only working in conjunction with the '-delay' option
	with a delay setting of 2 or greater.  Problem reported by Sami
	Liedes.  Patch by Vincent MAUGE.  Resolves Debian bug ID 414779.

2010-02-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (OpenBlob): Only apply scene substitution to
	the filename if adjoin is false.
