@@ -1,4 +1,4 @@
-.TH gm 1 "2010/02/03" "GraphicsMagick"
+.TH gm 1 "2010/02/08" "GraphicsMagick"
 .TP
 .in 15
 .in 15
@@ -23,7 +23,7 @@ gm - GraphicsMagick command-line utilities to create, edit, or convert images
 \fB[ [\fP \fIoptions\fP \fB]\fP \fIscript.msl\fP \fB]\fP
 
 \fBgm convert\fP \fB[ [\fP \fIoptions ...\fP \fB] [\fP \fIinput-file ...\fP
-\fB]\fP \fI...\fP \fB[\fP \fIoutput-file\fP \fB] ]\fP
+\fB] [\fP \fIoptions ...\fP \fB] ]\fP \fIoutput-file\fP 
 
 \fBgm display\fP \fB[\fP \fIoptions ...\fP \fB]\fP \fIfile ...\fP
 \fB[ [\fP\fIoptions ...\fP \fB]\fP\fIfile ...\fP \fB]\fP
