@@ -24,6 +24,10 @@
 2010-02-08  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> doc/GraphicsMagick.imdoc: Improve usage synopsis for
+        'convert'. SourceForge feature request 2845965 "confusing
+        documentation".
+
   <LI> magick/display.c (MagickXDisplayImage): Image number was
         incorrect in window title.
 
