@@ -95,7 +95,7 @@ color="#00B04F"><font size="+1">
 <strong>[ [</strong> <em>options</em> <strong>]</strong> <em>script.msl</em> <strong>]</strong>
 <p>
 <strong>gm convert</strong> <strong>[ [</strong> <em>options ...</em> <strong>] [</strong> <em>input-file ...</em>
-<strong>]</strong> <em>...</em> <strong>[</strong> <em>output-file</em> <strong>] ]</strong>
+<strong>] [</strong> <em>options ...</em> <strong>] ]</strong> <em>output-file</em> 
 <p>
 <strong>gm display</strong> <strong>[</strong> <em>options ...</em> <strong>]</strong> <em>file ...</em>
 <strong>[ [</strong><em>options ...</em> <strong>]</strong><em>file ...</em> <strong>]</strong>
