@@ -1,5 +1,9 @@
 2010-02-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* doc/GraphicsMagick.imdoc: Improve usage synopsis for
+	'convert'. SourceForge feature request 2845965 "confusing
+	documentation".
+
 	* magick/display.c (MagickXDisplayImage): Image number was
 	incorrect in window title.
 
